# BEM

./: .editorconfig  .gitignore  .gitignore_release  .license-header.txt  .pre-commit-config.yaml  .repomixignore  CHANGELOG.md  CICD_SETUP_SUMMARY.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SUITE_SUMMARY.md  Dockerfile.test  FINAL_RELEASE_SUMMARY.md  GITHUB_RELEASE_READY.md  GITIGNORE_AUDIT_SUMMARY.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  NAVIGATION_GUIDE.md  NOTICE  README.md  RELEASE_CHECKLIST.md  RELEASE_PREPARATION_SUMMARY.md  REPOSITORY_CLEANUP_SUMMARY.md  SECURITY.md  UNIFICATION_COMPLETE.md  competitor_baseline_plan.md  docker-compose.test.yml  generate_paper.py  genesis.xml  install_latex_deps.sh  level_8_completion_summary.md  mypy.ini  prepare_release.sh  pyproject.toml  pytest.ini  repomix.config.json  requirements-dev.txt  (+6 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  research_question.yml
.github/workflows/: bem_v13_cicd.yml  ci.yml  docs.yml  pages.yml  release.yml  security.yml  test.yml
configs/: claim_metrics.yaml
data/: hard_negs.jsonl  test.jsonl  train.jsonl  val.jsonl
data/corpora/: candidates.json  positives.json
data/indices/: domain.faiss  domain.metadata.json  domain_docs.jsonl
data/retrieval/: hard_negs.py
data/templates/: ablation_table.j2  results_table.j2
data/validation_experiment/: dataset_report.md
deployment/manifests/: base_lock.json  encoder_lock.json
deployment/monitoring/: fleet_dashboard.py
deployment/workflows/: bem_fleet_workflows.xml  experiment_runner.py
docs/: API.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_README.md  INTEGRATION_GUIDE.md  MONITORING_GUIDE.md  OPERATIONAL_MANUAL.md  QUICK_START.md  README.md  RESEARCH_GUIDE.md  RESEARCH_METHODOLOGY.md  STATISTICAL_FRAMEWORK.md  SYSTEM_VISION.md  TECHNICAL_ARCHITECTURE.md  TROUBLESHOOTING.md  requirements.txt
docs/architecture/: EXECUTIVE_SECURITY_SUMMARY.md  IMMEDIATE_SECURITY_FIXES.md  RESEARCH_METHODOLOGY_CONFIRMATION.md  SECURITY_HARDENING_PLAN.md  STATISTICAL_METHODOLOGY.md  TECHNICAL_ARCHITECTURE.md
docs/guides/: BUILD.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  USER_GUIDE.md
docs/missions/: BEM_FLEET_README.md  README.md
experiments/: A1_no_diagonal.yml  A2_no_hard_negatives.yml  A3_fp16_instead_fp8.yml  ADV_adversarial_retrieval.yml  AR0_bc.yml  AR1_pg.yml  B1_bem_v11_stable.yaml  L0_lora.yml  L0_static_lora.yaml  MM0.yml  MM0_v2.yml  OOD_robustness_comprehensive.yml  PT1_head_gating.yml  PT1_head_gating_v2.yml  PT2_dynamic_mask.yml  PT3_kronecker.yml  PT4_residual_film.yml  R1_robustness_second_model.yml  S0_baseline.yml  S0_baseline_v2.yml  S1_stack.yml  V11_learned_cache_policy.yaml  V2_dual_path.yaml  V7_film_lite.yaml  VC0.yml  ar0_bc.yml  ar1_pg.yml  bem_fleet_architecture.yml  experiment_matrix.yaml  f51_stateful.yml  f52_lowrank_diag.yml  f53_svd_warm.yml  f54_fp8.yml  f55_hardnegs.yml  gates_bem2.yaml  lora.yaml  lora_baseline.yml  mission_a_agentic_planner.yml  mission_b_living_model.yml  mission_c_alignment_enforcer.yml  (+16 more)
experiments/competitors/: adalora_baseline.yml  lorahub_baseline.yml  moelora_baseline.yml  qlora_baseline.yml  switch_lora_baseline.yml
experiments/configs/: fleet_monitoring.yaml
marketing/: README.md  badges_and_analytics.md
pipeline/: baseline_evaluators.py  paper_generator.py  pipeline_orchestrator.py  promotion_engine.py  retrieval_ablator.py  routing_auditor.py  shift_generator.py  spectral_monitor.py  statistical_validator.py  versioning_system.py
results/: BEM_2_0_SETUP_COMPLETE.json  baseline_results.json  bem_robustness_analysis.tex  bem_subset_analysis_report.json  bem_subset_analysis_report.md  bem_v11_results.json  competitor_baseline_results.json  comprehensive_bem_analysis.json  comprehensive_bem_analysis.md  failure_analysis.tex  harvested_data.jsonl  harvested_summary.json  lora_baseline_results.json  phase4_validation_results.json  real_runs_campaign_demo.json  repro_manifest_v13.json  reproducibility_manifest.json  robustness_discussion.tex  robustness_metrics.csv  robustness_results.csv  robustness_table.tex
scripts/: README_conversion.md  assemble_paper.py  build_faiss.py  build_paper.py  build_publication_bundle.py  ci_cd_integration.py  convert_experiments_to_templates.py  demo_complete_publication_system.py  fetch_model.py  fetch_value_model.py  fetch_vision_encoder.py  final_release_validation.py  generate_figures.py  generate_sections.py  generate_tables.py  harvest_logs.py  init_claims.py  lint_blind.py  make_configs.py  make_repro_pack.py  orchestrate_bem_fleet.py  page_guard.py  paper_factory.py  prepare_data.py  prepare_validation_data.py  record_env.py  render_paper.py  resource_manager.py  run_ablation_campaign.py  run_batch_experiments.py  run_benchmarks.py  run_special_evaluations.py  run_statistical_pipeline.py  train_experiment.py  update_claims_from_stats.py  validate_release.py  validate_reproducibility.py  validation_config.yml  workflow_health_monitor.py
tests/: README_validation.md  conftest.py  test_ablation_analysis.py  test_bem_v11_pipeline.py  test_bem_v13_comprehensive.py  test_bem_v13_comprehensive_framework.py  test_bem_v13_integration.py  test_bem_v13_performance_validation.py  test_bem_v13_statistical_reproducibility.py  test_component_migration.py  test_comprehensive_validation.py  test_configuration_system.py  test_evaluation_orchestrator.py  test_framework_validation.py  test_fused_kernels.py  test_imports.py  test_migration_suite.py  test_paper_generation.py  test_phase3_imports.py  test_phase4_imports.py  test_pipeline_core.py  test_pipeline_integration.py  test_retrieval_ablator.py  test_robustness_analysis.py  test_routing_auditor.py  test_shift_generator.py  test_spectral_monitor.py  test_statistical_validation.py  test_unified_infrastructure.py  test_vc0_imports.py
(+228 files in other folders)
